fix post display on mobile

--- a/components/client-less/pages/common.less
+++ b/components/client-less/pages/common.less
@@ -302,6 +302,7 @@
 	.link {
 		font-weight: 700;
 		margin: 0;
+		line-height: 1.6em;
 		.size(14);
 		.long-text();
 
@@ -313,7 +314,7 @@
 	.title {
 		font-weight: 300;
 		margin: 0;
-		line-height: 1.4;
+		line-height: 1.4em;
 		.size(20);
 	}
 }
